metadata/force-app/main/default/objects/CustomName_cjDva__c/CustomName_cjDva__c.object-meta.xml
<CustomObject>
    <description>Description_Usuzk</description>
    <label>CustomLabel_heWvN</label>
    <nameField>
        <label>CustomLabel_heWvN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_heWvNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>