metadata/force-app/main/default/objects/CustomName_cjDva__c/fields/CustomField_dkWOt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dkWOt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvDukt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>